# gekko-gc-emu

./: .gitignore  CMakeLists.txt  CodeInformation.md  Gekko.dsp  Gekko.dsw  Gekko.sln  Gekko.vcproj  GekkoQt.md  Gekko_VS2005.sln  Gekko_VS2005.vcproj  Gekko_VS2008.sln  Gekko_VS2008.vcproj  Gekko_VS2010.sln  Gekko_VS2010.vcxproj  JoypadConfiguration.md  LinuxBuild.md  ProjectHome.md  README.md  TodoList.md  crc.cpp  crc.h  emu.cpp  emu.h  gekko.sln  general.h  libjpeg.lib  memory.cpp  memory.h  opengl.cpp  opengl.h  pcafe.sln  platform.h  ppc_disasm.cpp  resource.aps  resource.rc  sysconf.xml  userconf.xml
CMakeTests/: FindGLFW.cmake
cpu core/: cpu_core.cpp  cpu_core.h  cpu_core_regs.cpp  cpu_core_regs.h
cpu core/disassembler/: ppc_disasm.cpp
cpu core/interpreter/: cpu_int.cpp  cpu_int.h  cpu_int_opcodes.cpp
cpu core/recompiler/: cpu_rec.cpp  cpu_rec.h  cpu_rec_assembler.cpp  cpu_rec_assembler_fpu.cpp  cpu_rec_assembler_loadstore.cpp  cpu_rec_il_compiler.cpp  cpu_rec_int.cpp  cpu_rec_memory.cpp  cpu_rec_opcodes_branch.cpp  cpu_rec_opcodes_compare.cpp  cpu_rec_opcodes_loadstore.cpp  (+3 more)
data/: sysconf.xml  userconf.xml
docs/: pcafe_conf.xsd
dvd interface/: apploader.cpp  apploader.h  bootrom.cpp  dol.cpp  elf.cpp  elf.h  gcm.cpp  gcm.h  gcm_dump.cpp  loaders.h  realdvd.cpp  realdvd.h
gx/: gx_fifo.cpp  gx_fifo.h  gx_states.cpp  gx_states.h  gx_tev.cpp  gx_texture.cpp  gx_transform.cpp  gx_transform.h  gx_vertex.cpp
gx/glew/: glew.c  (+2 more)
high level/: highlevel.cpp  highlevel.h  hle_audio.cpp  hle_crc.h  hle_dsp.cpp  hle_dsp.h  hle_func.h  hle_general.cpp  hle_general.h  hle_math.cpp
low level/: flipper.cpp  flipper.h
scripts/: update_version_h.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core.vcxproj  core.vcxproj.filters
src/core/src/: core.cpp  core.h  memory.cpp  memory.h
src/core/src/boot/: apploader.cpp  bootrom.cpp  bootrom.h
src/core/src/debugger/: debugger.cpp  debugger.h
src/core/src/dvd/: dol.cpp  elf.cpp  elf.h  gcm.cpp  gcm.h  gcm_dump.cpp  loader.cpp  loader.h  realdvd.cpp  realdvd.h
src/core/src/hle/: hle.cpp  hle.h  hle_audio.cpp  hle_crc.h  hle_dsp.cpp  hle_dsp.h  hle_func.h  hle_general.cpp  hle_general.h  hle_math.cpp  hle_math.h
src/core/src/hle/dsp/: mail_manager.cpp  mail_manager.h  ucode.cpp  ucode.h  ucode_rom.cpp  ucode_rom.h  ucode_zelda.cpp  ucode_zelda.h
src/core/src/hw/: hw.cpp  hw.h  hw_ai.cpp  hw_ai.h  hw_cp.cpp  hw_cp.h  hw_di.cpp  hw_di.h  hw_dsp.cpp  hw_dsp.h  hw_exi.cpp  hw_exi.h  hw_exi_memorycard.cpp  hw_gx.cpp  hw_gx.h  hw_mi.cpp  hw_mi.h  hw_pe.cpp  hw_pe.h  hw_pi.cpp  hw_pi.h  hw_si.cpp  hw_si.h  hw_vi.cpp  hw_vi.h
src/core/src/hw/plugins/: plugins.cpp
src/core/src/powerpc/: cpu_core.cpp  cpu_core.h  cpu_core_regs.cpp  cpu_core_regs.h  cpu_core_regs_layout.h  cpu_core_userid.h  cpu_opsgroup.h
src/core/src/powerpc/disassembler/: ppc_disasm.cpp  ppc_disasm.h
src/core/src/powerpc/interpreter/: cpu_int.cpp  cpu_int.h  cpu_int_opcodes.cpp
src/core/src/powerpc/recompiler/: cpu_rec.cpp  cpu_rec.h  cpu_rec_assembler.cpp  cpu_rec_assembler.h  cpu_rec_assembler_fpu.cpp  cpu_rec_assembler_jumps.cpp  cpu_rec_assembler_loadstore.cpp  cpu_rec_il_compiler.cpp  cpu_rec_il_registers_fpu.cpp  cpu_rec_il_registers_x86.cpp  cpu_rec_int.cpp  cpu_rec_memory.cpp  cpu_rec_memory.h  cpu_rec_opcodes_branch.cpp  cpu_rec_opcodes_loadstore.cpp  cpu_rec_opcodes_loadstore_fpu.cpp  cpu_rec_opcodes_math.cpp  cpu_rec_opcodes_math_fpu.cpp  cpu_rec_opcodes_ps.cpp  cpu_rec_opsgroup.h  cpu_rec_regcache.cpp
src/core/src/video/: emuwindow.h  emuwindow_sdl.cpp  emuwindow_sdl.h  gx_fifo.cpp  gx_fifo.h  gx_states.cpp  gx_states.h  gx_tev.cpp  gx_tev.h  gx_texture.cpp  gx_texture.h  gx_transform.cpp  gx_vertex.cpp  gx_vertex.h  opengl.cpp  opengl.h
src/gekko/: CMakeLists.txt  gekko.vcxproj  gekko.vcxproj.filters  pcafe.vcxproj
src/gekko/src/: gekko.cpp
src/gekko/src/emuwindow/: emuwindow_glfw.cpp  emuwindow_glfw.h  emuwindow_sdl.cpp  emuwindow_sdl.h
src/gekko_qt/: CMakeLists.txt  gekko_qt.vcxproj  gekko_qt.vcxproj.filters  qt-build.props  qt-build.targets  qt-build.xml
src/gekko_qt/src/: bootmanager.cpp  bootmanager.h  bootmanager.hxx  callstack.cpp  callstack.hxx  callstack.ui  disasm.cpp  disasm.hxx  disasm.ui  gamelist.cpp  gamelist.hxx  gekko_regs.cpp  gekko_regs.hxx  gekko_regs.ui  gfx_fifo_player.cpp  gfx_fifo_player.hxx  gfx_fifo_player.ui  hotkeys.cpp  hotkeys.h  image_info.cpp  image_info.hxx  image_info.ui  main.cpp  main.hxx  main.ui  path_list.cpp  path_list.hxx  ramview.cpp  ramview.hxx  version.h  welcome_wizard.cpp  welcome_wizard.hxx  welcome_wizard.ui
src/gekko_qt/src/config/: controller_config.cpp  controller_config.hxx  controller_config.ui  controller_config_util.cpp  controller_config_util.hxx
src/gekko_qt/src/debugger/: gfx_texcache.cpp  gfx_texcache.hxx  gfx_texcache.ui  gfx_texture_preview.cpp  gfx_texture_preview.hxx  gfx_texture_preview.ui
src/video_core/: CMakeLists.txt  texture_manager.cpp  video_core.vcxproj  video_core.vcxproj.filters
src/video_core/src/: bp_mem.cpp  bp_mem.h  cp_mem.cpp  cp_mem.h  fifo.cpp  fifo.h  fifo_player.cpp  fifo_player.h  gx_types.h  renderer_base.cpp  renderer_base.h  shader_manager.cpp  shader_manager.h  texture_decoder.cpp  texture_decoder.h  texture_manager.cpp  texture_manager.h  utils.cpp  utils.h  vertex_loader.cpp  vertex_loader.h  vertex_manager.cpp  vertex_manager.h  video_core.cpp  video_core.h  xf_mem.cpp  xf_mem.h
src/video_core/src/renderer_gl2/: renderer_gl2.cpp  renderer_gl2.h
src/video_core/src/renderer_gl3/: raster_font.cpp  renderer_gl3.cpp  renderer_gl3.h  shader_base_types.h  shader_interface.cpp  shader_interface.h  shader_manager.cpp  shader_manager.h  texture_cache.cpp  texture_cache.h  texture_interface.cpp  texture_interface.h  uniform_manager.cpp  uniform_manager.h
user interface/: emu_browser.cpp  emu_browser.h  emu_config.cpp  emu_dbg.cpp  emu_dbg.h  emu_ini.cpp  emu_win.cpp
vsprops/: App.props  Base.props  CodeGen_Debug.props  CodeGen_Release.props  Externals.props  Optimization_DebugFast.props  Optimization_Release.props  Qt.props
(+100 files in other folders)
